--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -11,7 +11,7 @@
   <ion-tab [root]="tab3Root" [show]='tabToShow[2]' tabTitle="Multiple" ></ion-tab>
   <ion-tab [root]="tab4Root" [show]='tabToShow[3]' tabTitle="Basket" ></ion-tab>
   <ion-tab [root]="tab5Root" [show]='tabToShow[4]' tabTitle="Progressione" ></ion-tab>
-  <ion-tab [root]="tab6Root" [show]='tabToShow[5]' tabTitle="UltimeVincite" ></ion-tab>
+  <ion-tab [root]="tab6Root" [show]='tabToShow[5]' tabTitle="Vincite" ></ion-tab>
   <ion-tab [root]="tab7Root" [show]='tabToShow[6]' tabTitle="Bonus" ></ion-tab>
   
 </ion-tabs>
